# TinyDebugger

./: .gitignore  CMakeLists.txt  LICENSE.txt  MR.cpp  MR.hpp  TinyD.cpp  TinyD.hpp  Utils.cpp  Utils.hpp  command.gdb  dat.cpp  dat.hpp  do_it.sh  log.txt  main.cpp  msgbox.cpp  mstr.hpp
dat2gdb/: dat2gdb.cpp
dat_limit/: dat_limit.cpp
dat_limited/: dat_limited.cpp
spec2dat/: spec.cpp  spec.hpp  spec2dat.cpp
